# HPC_Exercise

./: CMakeLists.txt  readme.txt  references.txt
src/: exercise1.cpp  exercise2.cpp  exercise3.cpp  main.cpp  opencl_manager.cpp  opencl_manager.h  prefix_sum.cpp  prefix_sum.h  rotate_image.cpp  rotate_image.h  stream_compact.cpp  stream_compact.h
src/constants/: prefix_sum_constants.h  rotation_constants.h
src/kernels/: rotate.cl  scan.cl  stream_compact.cl
